# vim-yaifa-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
editorconfig/: CMakeLists.txt
editorconfig/plugin/: CMakelists.txt
filetype/: CMakelists.txt
filetype/files/spaces-2/: c_block_comment_1.c  perl_heredoc_1.pl  perl_heredoc_multi_word_1.pl  perl_heredoc_tilde_1.pl  perl_multiline_comment_1.pl  python_triple_quote_1.py  sh_heredoc_w_redirection_1.sh
filetype/files/spaces-4/: go_backtick_1.go  go_block_comment_1.go  ruby_block_comment_1.rb  ruby_multi_line_percent_angle_bracket_string_1.rb  ruby_multi_line_percent_backslash_string_1.rb  ruby_multi_line_percent_bracket_string_1.rb  ruby_multi_line_percent_bracket_string_w_interp_1.rb  ruby_multi_line_percent_single_quote_string_1.rb  ruby_multi_line_percent_string_1.rb  sh_heredoc_1.sh  sh_heredoc_dash_1.sh  sh_heredoc_quoted_multi_word_1.sh  sh_heredoc_w_redirection_1.sh  sh_multi_line_string_1.sh
heuristics/: CMakelists.txt
heuristics/files/mixed-4/: arabic.c  buffer.c  charset.c  diff.c  digraph.c  dosinst.c  edit.c  eval.c  ex_cmds.c  ex_cmds2.c  ex_docmd.c  ex_eval.c  ex_getln.c  farsi.c  fileio.c  fold.c  getchar.c  gui.c  gui_at_fs.c  gui_at_sb.c  gui_athena.c  gui_beval.c  gui_gtk.c  gui_gtk_f.c  gui_gtk_x11.c  gui_mac.c  gui_motif.c  gui_photon.c  gui_riscos.c  gui_w16.c  gui_w32.c  gui_w48.c  gui_x11.c  gui_xmdlg.c  gui_xmebw.c  hangulin.c  hardcopy.c  hashtab.c  if_cscope.c  if_mzsch.c  (+51 more)
heuristics/files/spaces-4/: file1.css
heuristics/files/tabs-8/: diffmodel.cpp  (+3 more)
modeline/: CMakelists.txt
(+8 files in other folders)
